Отправка на проверку

--- a/styles/style.css
+++ b/styles/style.css
@@ -1,5 +1,4 @@
 /* Здесь вы напишете основную часть стилей страницы.
-
 Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
 ✦ like-icon — для svg-иконки анимированного сердца
 ✦ card__like-button — для кнопки Like рядом с иконкой
@@ -7,10 +6,277 @@
 ✦ card__icon-button — для кнопки, оборачивающей иконку
 ✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
 ✦ button__text — для обозначения текстового элемента внутри кнопки
-
 */
 
 .page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: var(--font-main), sans-serif;
+  background-image: var(--bg-page);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
   min-inline-size: 320px;
   min-block-size: 100dvb;
+  font-variation-settings: "wght" var(--weight-text-card);
+}
+
+.stretch-wrapper {
+  inline-size: var(--widht-page);
+}
+
+.header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 100px 0;
+  border: var(--border-main);
+  padding-block-start: clamp(7.5rem, 6.3462rem + 4.9231cqi, 8.5rem);
+  padding-block-end: clamp(121px, 17.3vw, 130px);
+  font-family: var(--font-accent);
+  background-color: var(--background-main);
+}
+
+.header-title {
+  padding-block-start: 25px;
+  font-weight: var(--weight-header);
+  font-size: clamp(49px, 9.3vw, 65px);
+}
+
+.header-subtitle {
+  font-weight: var(--weight-header);
+  font-size: clamp(14px, 3.3vw, 23px);
+  text-transform: uppercase;
+}
+
+.main {
+  display: flex;
+  flex-direction: column;
+  gap: 49px;
+  padding-block-end: var(--page-indents);
+}
+
+.card {
+  border: var(--border-main);
+  background-color: var(--background-main);
+}
+
+.card-title {
+  padding: var(--title-indents);
+  font-size: var(--font-size-card);
+  font-variation-settings: "wght" var(--weight-title-card);
+}
+
+.wrapper-img {
+  position: relative;
+  margin: 0;
+  padding: 0;
+}
+
+.card-img {
+  display: block;
+  border-top: var(--border-main);
+  border-bottom: var(--border-main);
+  object-fit: cover;
+  object-position: center;
+  inline-size: 100%;
+  aspect-ratio: 1 / 1;
+}
+
+.label {
+  position: absolute;
+  color: rgba(0, 0, 0, 0.5);
+  font-family: var(--font-accent);
+  font-weight: 400;
+  font-size: var(--font-size-accent);
+  text-shadow: 0px 0px 3px var(--stroke-label);
+  inset-block-start: 25px;
+  inset-inline-end: 26px;
+  mix-blend-mode: hard-light;
+  -webkit-text-stroke: 1px var(--stroke-label);
+}
+
+@supports (text-stroke: 1px var(--stroke-label)) {
+  .label {
+    text-stroke: 1px var(--stroke-label);
+  }
+}
+
+.wrapper-content {
+  display: flex;
+  flex-direction: column;
+  gap: 26px;
+  padding: var(--text-indents);
+  font-size: var(--font-size-card);
+  line-height: 21px;
+}
+
+.wrapper-btn {
+  display: flex;
+  justify-content: flex-end;
+  gap: 5px;
+  margin-top: -3px;
+}
+
+.card__icon-button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  border: 2px solid transparent;
+  padding: 0;
+  background-color: transparent;
+  transition: border-color 0.3s ease;
+  cursor: pointer;
+  block-size: 38px;
+}
+
+.card__icon-button:focus-visible {
+  border-color: var(--color-accent);
+  outline: none;
+}
+
+.button {
+  position: relative;
+  border: 2px solid var(--color-accent);
+  color: #fff;
+  background-color: var(--background-main);
+  transition: box-shadow 0.3s ease;
+  cursor: pointer;
+}
+
+.button::before {
+  content: "";
+  position: absolute;
+  inset: 0;
+  background-color: var(--color-accent);
+  transition: transform 0.5s ease-in-out;
+  transform: scaleX(0);
+  transform-origin: left;
+}
+
+.button:hover::before {
+  transform: scaleX(1);
+}
+
+.button:focus-visible {
+  box-shadow: 2px 2px 0 var(--color-accent);
+  outline: none;
+}
+
+.card__like-button {
+  inline-size: 129px;
+  block-size: 38px;
+}
+
+.button__text {
+  position: relative;
+  font-family: var(--font-accent);
+  font-weight: var(--weight-header);
+  font-size: var(--font-size-accent);
+  mix-blend-mode: difference;
+}
+
+.save-btn {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 10px;
+  margin: 0 auto;
+  padding: 16px 18px;
+  font-family: var(--font-accent);
+  font-weight: var(--weight-header);
+}
+
+.floppy-icone {
+  position: relative;
+  inline-size: 21px;
+  block-size: 21px;
+  mix-blend-mode: difference;
+}
+
+@media (width < 380px) {
+  .save-btn {
+    flex-direction: column;
+  }
+
+  .floppy-icone {
+    inline-size: 28px;
+    block-size: 28px;
+  }
+}
+
+dialog[open] {
+  display: grid;
+  gap: 30px;
+  border: 2px solid var(--color-accent);
+  padding: 30px;
+  inline-size: 353px;
+}
+
+@media (width < 380px) {
+  dialog[open] {
+    padding: 30px 40px;
+  }
+}
+
+dialog[open]::backdrop {
+  background-color: rgba(0, 0, 0, 0.75);
+}
+
+.wrapper-modal {
+  display: grid;
+  grid-template-columns: auto auto;
+  align-items: center;
+  gap: 20px;
+}
+
+.modal-icon {
+  inline-size: 39px;
+  block-size: 39px;
+  mix-blend-mode: normal;
+}
+
+.text-modal {
+  font-family: var(--font-accent);
+  font-weight: var(--weight-header);
+  font-size: var(--font-size-accent);
+  line-height: 1.5;
+  text-transform: uppercase;
+}
+
+.btn-ok {
+  block-size: 38px;
+}
+
+.bright {
+  filter: brightness(200%);
+}
+
+.contrast {
+  filter: contrast(30%);
+}
+
+.blur {
+  filter: blur(0.5rem);
+}
+
+.grayscale {
+  filter: grayscale(100%);
+}
+
+.hue-rotate {
+  filter: hue-rotate(-90deg);
+}
+
+.sepia {
+  filter: sepia(80%);
+}
+
+.invert-saturate {
+  filter: invert(0.7) saturate(158%);
 }
