--- a/styles/animations.css
+++ b/styles/animations.css
@@ -9,3 +9,97 @@
 ✦ button__text — для обозначения текстового элемента внутри кнопки
 
 */
+.contour {
+  transition: fill 0.1s linear;
+}
+
+.main-body {
+  fill: transparent;
+  transition: fill 0.3s linear;
+}
+
+.core {
+  fill: transparent;
+  transition: fill 0.3s linear 0.03s;
+}
+
+.sparks {
+  opacity: 0;
+}
+
+.heart {
+}
+
+.like-icon:hover .core {
+  fill: var(--color-accent);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:hover .main-body {
+  fill: var(--color-accent);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon:active .core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon:active .main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.like-icon.is-liked .contour {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.06s;
+}
+
+.like-icon.is-liked .core {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear;
+}
+
+.like-icon.is-liked .main-body {
+  fill: var(--animation-fill-color);
+  transition: fill 0.3s linear 0.05s;
+}
+
+.is-liked .heart {
+  animation-name: scaling;
+  animation-delay: 0.1s;
+  animation-duration: 0.3s;
+  animation-direction: normal;
+  animation-timing-function: ease-in;
+  animation-iteration-count: 1;
+  transform-origin: center;
+}
+
+.is-liked .sparks {
+  animation-name: sparking;
+  animation-delay: 0.3s;
+  animation-duration: 0.3s;
+  animation-direction: normal;
+  animation-timing-function: ease-in;
+  animation-iteration-count: 1;
+}
+
+@keyframes scaling {
+  0% {
+    transform: scale(1);
+  }
+
+  100% {
+    transform: scale(1.25);
+  }
+}
+
+@keyframes sparking {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
+}
