--- a/styles/style.css
+++ b/styles/style.css
@@ -30,19 +30,17 @@
 .header {
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 20px;
   margin: 100px 0;
   border: var(--border-main);
-  padding-block-start: clamp(7.5rem, 6.3462rem + 4.9231cqi, 8.5rem);
-  padding-block-end: clamp(121px, 17.3vw, 130px);
-  font-family: var(--font-accent);
+  padding-block-start: clamp(121px, 17.3vw, 129px);
+  padding-block-end: clamp(120px, 17.3vw, 128px);
+  font-family: var(--font-accent), fantasy;
   background-color: var(--background-main);
 }
 
 .header-title {
-  padding-block-start: 25px;
   font-weight: var(--weight-header);
   font-size: clamp(49px, 9.3vw, 65px);
 }
@@ -90,7 +88,7 @@
 .label {
   position: absolute;
   color: rgba(0, 0, 0, 0.5);
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), fantasy;
   font-weight: 400;
   font-size: var(--font-size-accent);
   text-shadow: 0px 0px 3px var(--stroke-label);
@@ -100,9 +98,9 @@
   -webkit-text-stroke: 1px var(--stroke-label);
 }
 
-@supports (text-stroke: 1px var(--stroke-label)) {
+@supports (-webkit-text-stroke: 1px var(--stroke-label)) {
   .label {
-    text-stroke: 1px var(--stroke-label);
+    -webkit-text-stroke: 1px var(--stroke-label);
   }
 }
 
@@ -175,7 +173,7 @@
 
 .button__text {
   position: relative;
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), fantasy;
   font-weight: var(--weight-header);
   font-size: var(--font-size-accent);
   mix-blend-mode: difference;
@@ -188,7 +186,7 @@
   gap: 10px;
   margin: 0 auto;
   padding: 16px 18px;
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), fantasy;
   font-weight: var(--weight-header);
 }
 
@@ -242,14 +240,15 @@ dialog[open]::backdrop {
 }
 
 .text-modal {
-  font-family: var(--font-accent);
+  font-family: var(--font-accent), fantasy;
   font-weight: var(--weight-header);
   font-size: var(--font-size-accent);
   line-height: 1.5;
   text-transform: uppercase;
 }
 
-.btn-ok {
+.modal-btn {
+  text-transform: uppercase;
   block-size: 38px;
 }
 
